# penn-football-data

./: .pdm-python  README.md  group_means_2024.json  jr_day_2025.json  latest_tests_2020_2024.json  penn-football-strength-standards.Rproj  penn_football_roster_2019_2025.csv  pyproject.toml  stats_2020_2024.json
data/: 2020_maxes_wide.csv  2023_maxes_long.csv  Name_Number_Class Roster Master Sheet.xlsx  max_24_group.json  roster_19_25.csv  roster_25_26.csv  spring_2024_maxes_long.csv  stats_24.json
data processing/: cleaning.R
data/raw_testing/: junior_day_2.25.csv  spring_2022_maxes_long.csv  spring_2024_offseason.csv  spring_2024_offseason_bests.csv  spring_2025_maxes_long.csv
eda/: RSI_calculation.R
webscraping/: roster_photo_scraper.ipynb
